[project]
name = "polybillionaire"
version = "0.1.0"
description = "Short-duration crypto trading bot for Polymarket up-or-down markets"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
    "py-clob-client>=0.18",
    "python-dotenv>=1.0",
]

[project.scripts]
polybillionaire = "polybillionaire.cli:main"
pb = "polybillionaire.cli:main"
